# Project01

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/clients/: supabase.py
backend/app/core/: config.py  events.py  security.py
backend/app/models/: trace.py
backend/app/routes/: sessions.py  tasks.py
backend/app/services/: analysis.py  task_loader.py  trace_store.py
backend/tests/: conftest.py  test_admin_auth.py  test_analysis.py  test_tasks.py  test_trace.py
docs/: admin-and-environments.md  ask-claude-discriminators.md  secrets.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/compare/: page.tsx
frontend/src/app/admin/sessions/: page.tsx
frontend/src/app/admin/sessions/[id]/: page.tsx
frontend/src/app/assessment/[sessionId]/: page.tsx
frontend/src/components/: MarkReadyButton.tsx  Markdown.tsx  Timer.tsx  WarmUp.tsx  Workspace.tsx  WorkspaceShell.tsx  useTraceBridge.ts  useWorkspaceTour.ts
frontend/src/lib/: admin-api.ts  api.ts  format.ts  trace-parse.ts  trace.ts
frontend/src/types/: task.ts  trace.ts
frontend/tests/: task-content.test.ts  trace-parse.test.ts
supabase/: config.toml
supabase/migrations/: 20260623000000_initial_schema.sql  20260625000000_submit_fields.sql
tasks/v1-cart-discount/: ANSWER_KEY.md
tasks/v1-cart-discount/task-files/: AGENT_NOTE.md  TASK.md  cart.test.ts  cart.ts  manifest.json  money.ts
