[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
